# KnowledgeBuilder

./: .gitignore  README.md  kb_config.aws.example.yaml  kb_config.example.yaml  kb_config.local.example.yaml  pyproject.toml
kb_indexer/: __init__.py  contextual_retrieval.py  embeddings.py  extractor.py  git_utils.py  graph_store.py  planner.py  settings.py  state_store.py
kb_indexer/backends/: __init__.py  aws_kb.py  base.py  faiss_local.py
lambda/chunker/: app.py
scripts/: agent_plan_stub.py  bootstrap_kb.py  contextualize_chunk_stub.py  reindex.py  search.py
